--- a/road traffic animation.html
+++ b/road traffic animation.html
@@ -5,40 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Traffic animation</title>
-    <link rel="stylesheet" href="./road traffic animation.css">
+    <link rel="stylesheet" href="road traffic animation.css">
+    <link rel="stylesheet" href="phone.css">
 </head>
 <body>
     <div class="container">
         <!-- <div id="road"> -->
-            <img src="./simple-village-house-background_1308-44771.avif" alt="road" width="100%" height="100%">
+            <img src="simple-village-house-background_1308-44771.avif" alt="road" width="100%" height="100%">
         <!-- </div> -->
 
         <div id="aeroplane">
-            <img src="./Animated_aeroplane-removebg-preview.png" alt="" width="200px" height="200px">
+            <img src="Animated_aeroplane-removebg-preview.png" alt="" width="200px" height="200px" id="aeroplane">
         </div>
 
         <div id="chopper">
-            <img src="./Chopper-removebg-preview.png" alt="" width="200px" height="200px">
+            <img src="./Chopper-removebg-preview.png" alt="" width="200px" height="200px" id="chopper">
         </div>
 
         <div id="man">
-            <img src="./A_walking_man-removebg-preview.png" alt="" width="200px" height="200px">
+            <img src="A_walking_man-removebg-preview.png" alt="" width="200px" height="200px" id="man">
         </div>
 
         <div id="lady">
-            <img src="./A_lady_walking-removebg-preview.png" alt="" width="200px" height="200px">
+            <img src="A_lady_walking-removebg-preview.png" alt="" width="200px" height="200px" id="lady">
         </div>
 
         <div id="car">
-            <img src="./red_animated_car-removebg-preview.png" alt="" width="200px" height="200px">
+            <img src="red_animated_car-removebg-preview.png" alt="" width="200px" height="200px" id="car">
         </div>
 
         <div id="bicycle">
-            <img src="./Bicycle_rider-removebg-preview.png" alt="" width="200px" height="200px">
+            <img src="Bicycle_rider-removebg-preview.png" alt="" width="200px" height="200px" id="bicycle">
         </div>
 
         <div id="rider">
-            <img src="./rider2-removebg-preview.png" alt="" width="300px" height="">
+            <img src="rider2-removebg-preview.png" alt="" width="300px" height="" id="rider">
         </div>
     </div>
 </body>
